--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master   # Set a branch that will trigger a deployment
+  workflow_dispatch:  # Enable manual deploy
 
 jobs:
   deploy:
