--- a/assets/jsconfig.json
+++ b/assets/jsconfig.json
@@ -2,9 +2,7 @@
  "compilerOptions": {
   "baseUrl": ".",
   "paths": {
-   "*": [
-    "..\\..\\..\\AppData\\Local\\hugo_cache\\modules\\filecache\\modules\\pkg\\mod\\github.com\\nicokaiser\\hugo-theme-gallery\\v2@v2.0.0\\assets\\*"
-   ]
+   "*": null
   }
  }
 }
