--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -27,7 +27,7 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo
+        run: hugo --minify --timeout 60s
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
